--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# drcstools\n",
     "\n",
     "> API details."
    ]
@@ -33,7 +33,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Sylvain!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"Sylvain\")"
+   ]
   }
  ],
  "metadata": {
