--- a/01_stormtracks.ipynb
+++ b/01_stormtracks.ipynb
@@ -26,7 +26,7 @@
     "# plotting\n",
     "try:\n",
     "    import matplotlib.pyplot as plt\n",
-    "    import cartopy.crs as ccrs\n",
+    "    #import cartopy.crs as ccrs\n",
     "except:\n",
     "    logger.warning(\"Matplotlib and/or Cartopy is not installed in your python environment. Xarray Dataset plotting functions will not work.\")\n",
     "\n"
