--- a/01_stormtracks.ipynb
+++ b/01_stormtracks.ipynb
@@ -6,6 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# default_exp storm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stormtracks\n",
+    "\n",
+    "> calculate stormtracks from SLP fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#hide\n",
     "import numpy as np\n",
     "import xarray as xr\n",
@@ -38,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "class storm():\n",
     "\n",
     "    def __init__(self, filename=\"\", ds=None, anomaly = True, **kwargs):\n",
@@ -466,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9f1263f850>]"
+       "[<matplotlib.lines.Line2D at 0x7fb0dc10fac0>]"
       ]
      },
      "execution_count": null,
@@ -574,7 +593,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9f10d56b20>"
+       "<matplotlib.legend.Legend at 0x7fb0da837a30>"
       ]
      },
      "execution_count": null,
@@ -652,7 +671,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f9f10d8c460>"
+       "<matplotlib.legend.Legend at 0x7fb0da803d90>"
       ]
      },
      "execution_count": null,
@@ -742,7 +761,7 @@
       " longitude: 'lon'\n",
       " latitude: 'lat'\n",
       "\n",
-      " 60%|██████    | 3/5 [00:00<00:00, 24.14it/s]"
+      " 60%|██████    | 3/5 [00:00<00:00, 24.22it/s]"
      ]
     },
     {
@@ -756,8 +775,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 22.68it/s]\n",
-      " 60%|██████    | 3/5 [00:00<00:00, 22.28it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 23.63it/s]\n",
+      "100%|██████████| 5/5 [00:00<00:00, 24.93it/s]"
      ]
     },
     {
@@ -771,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 22.86it/s]\n"
+      "\n"
      ]
     }
    ],
@@ -790,7 +809,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f9f10209880>]"
+       "[<matplotlib.lines.Line2D at 0x7fb0d9f22be0>]"
       ]
      },
      "execution_count": null,
@@ -833,7 +852,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7f9f101d2310>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0d9c93f40>"
       ]
      },
      "execution_count": null,
@@ -865,7 +884,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7f9f0ad70940>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0da7fe220>"
       ]
      },
      "execution_count": null,
@@ -897,7 +916,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7f9f0ac7be50>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0d8a52340>"
       ]
      },
      "execution_count": null,
