--- a/01_stormtracks.ipynb
+++ b/01_stormtracks.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# default_exp storm"
+    "# default_exp storm\n",
+    "from nbdev import *"
    ]
   },
   {
@@ -469,6 +470,86 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm.derivative\" class=\"doc_header\"><code>storm.derivative</code><a href=\"__main__.py#L342\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm.derivative</code>(**`variable`**, **`N`**=*`20`*, **`dim`**=*`''`*, **`order`**=*`1`*)\n",
+       "\n",
+       "Calculates the first and second derivative in dimension \n",
+       "of choice, applying a harmonic regression.\n",
+       "See Benestad et al. (2006)        "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm.derivative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._calc_dX\" class=\"doc_header\"><code>storm._calc_dX</code><a href=\"__main__.py#L373\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._calc_dX</code>(**`data`**, **`N`**, **`order`**)\n",
+       "\n",
+       "Calculation of the derivative using harmonic regression (Fourier fit)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._calc_dX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._harmonicRegression\" class=\"doc_header\"><code>storm._harmonicRegression</code><a href=\"__main__.py#L332\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._harmonicRegression</code>(**`data`**, **`N`**)\n",
+       "\n",
+       "Returns Fourier coefficients"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._harmonicRegression)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -485,7 +566,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb0dc10fac0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc32fecdbe0>]"
       ]
      },
      "execution_count": null,
@@ -593,7 +674,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb0da837a30>"
+       "<matplotlib.legend.Legend at 0x7fc32fd97af0>"
       ]
      },
      "execution_count": null,
@@ -671,7 +752,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb0da803d90>"
+       "<matplotlib.legend.Legend at 0x7fc32fe99e20>"
       ]
      },
      "execution_count": null,
@@ -761,7 +842,7 @@
       " longitude: 'lon'\n",
       " latitude: 'lat'\n",
       "\n",
-      " 60%|██████    | 3/5 [00:00<00:00, 24.22it/s]"
+      " 60%|██████    | 3/5 [00:00<00:00, 24.47it/s]"
      ]
     },
     {
@@ -775,8 +856,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<00:00, 23.63it/s]\n",
-      "100%|██████████| 5/5 [00:00<00:00, 24.93it/s]"
+      "100%|██████████| 5/5 [00:00<00:00, 23.56it/s]\n",
+      " 60%|██████    | 3/5 [00:00<00:00, 24.34it/s]"
      ]
     },
     {
@@ -790,7 +871,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n"
+      "100%|██████████| 5/5 [00:00<00:00, 23.97it/s]\n"
      ]
     }
    ],
@@ -809,7 +890,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb0d9f22be0>]"
+       "[<matplotlib.lines.Line2D at 0x7fc32f401190>]"
       ]
      },
      "execution_count": null,
@@ -852,7 +933,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0d9c93f40>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fc32f3bc280>"
       ]
      },
      "execution_count": null,
@@ -884,7 +965,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0da7fe220>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fc32f03f250>"
       ]
      },
      "execution_count": null,
@@ -916,7 +997,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x7fb0d8a52340>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x7fc32de766a0>"
       ]
      },
      "execution_count": null,
