--- a/00_storm_object.ipynb
+++ b/00_storm_object.ipynb
@@ -58,9 +58,7 @@
    "source": [
     "#export\n",
     "class storm():\n",
-    "\n",
-    "    def __init__(self, filename=\"\", ds=None, anomaly = True, **kwargs):\n",
-    "        \"\"\"The constructor for storm track class. Initialize a storm instance.\n",
+    "    \"\"\"The constructor for storm track class. Initialize a storm instance.\n",
     "        \n",
     "        If filename is given, try to load it directly.\n",
     "        Arguments to the load function can be passed as key=value argument.\n",
@@ -72,7 +70,8 @@
     "                xarray dataset\n",
     "            anomaly: bool\n",
     "                calculates anomaly in time\n",
-    "        \"\"\"\n",
+    "    \"\"\"\n",
+    "    def __init__(self, filename=\"\", ds=None, anomaly = True, **kwargs):\n",
     "        \n",
     "        self._anomaly = anomaly\n",
     "        \n",
@@ -392,6 +391,222 @@
     "            \n",
     "        return delta"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm.read\" class=\"doc_header\"><code>storm.read</code><a href=\"__main__.py#L119\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm.read</code>(**`filename`**, **\\*\\*`kwargs`**)\n",
+       "\n",
+       "Reads a file into a xarray dataset.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "    filename : string\n",
+       "        Valid path + filename"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm.read)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm.read_xarray\" class=\"doc_header\"><code>storm.read_xarray</code><a href=\"__main__.py#L137\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm.read_xarray</code>(**`ds`**)\n",
+       "\n",
+       "Read an existing xarray data set.\n",
+       "\n",
+       "Parameter:\n",
+       "----------\n",
+       "    ds: data set\n",
+       "        Valid xarray data set."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm.read_xarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm.set_up\" class=\"doc_header\"><code>storm.set_up</code><a href=\"__main__.py#L158\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm.set_up</code>(**`time_name`**=*`None`*, **`longitude_name`**=*`None`*, **`latitude_name`**=*`None`*, **`force`**=*`False`*, **`write`**=*`True`*)\n",
+       "\n",
+       "Prepares the dataset for storm tracking. Does consistency checks\n",
+       "and tests if all required information is available. Sets (automatically \n",
+       "or manually) internal variables and dimensions.\n",
+       "Parameters\n",
+       "----------\n",
+       "    time_name : string, optional\n",
+       "        Name of time dimension. The default is None.\n",
+       "    longitude_name : string, optional\n",
+       "        Name of longitude dimension. The default is None.\n",
+       "    latitude_name : string, optional\n",
+       "        Name of latitude dimension. The default is None.\n",
+       "    force=False: bool, optional \n",
+       "        Skip some consistency checks.\n",
+       "    write=True: bool, optional\n",
+       "        Print name of dimensions.\n",
+       "Returns\n",
+       "-------\n",
+       "    None."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm.set_up)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._get_resolution\" class=\"doc_header\"><code>storm._get_resolution</code><a href=\"__main__.py#L282\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._get_resolution</code>(**`dim`**, **`force`**=*`False`*)\n",
+       "\n",
+       "set spatial (lat/lon) and temporal (time) resolution"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._get_resolution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._get_name_time\" class=\"doc_header\"><code>storm._get_name_time</code><a href=\"__main__.py#L224\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._get_name_time</code>()\n",
+       "\n",
+       "check for 'time' dimension and return name"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._get_name_time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._get_name_longitude\" class=\"doc_header\"><code>storm._get_name_longitude</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._get_name_longitude</code>()\n",
+       "\n",
+       "check for 'longitude' dimension and return name"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._get_name_longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "<h4 id=\"storm._get_name_longitude\" class=\"doc_header\"><code>storm._get_name_longitude</code><a href=\"__main__.py#L251\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "\n",
+       "> <code>storm._get_name_longitude</code>()\n",
+       "\n",
+       "check for 'longitude' dimension and return name"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "show_doc(storm._get_name_longitude)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
