--- a/01_derivatives.ipynb
+++ b/01_derivatives.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "# default_exp derivative\n",
-    "from nbdev import *"
+    "\n",
+    "# default_cls_lvl 3"
    ]
   },
   {
@@ -38,7 +39,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def _harmonicRegression(self, data, N):\n",
+    "def harmonicRegression(self, data, N):\n",
     "    \"\"\"Returns Fourier coefficients\"\"\"\n",
     "    result = np.zeros((N, 2))\n",
     "    T = len(data)\n",
@@ -48,7 +49,7 @@
     "        result[n,1] = 2/T*(data * np.sin(2*np.pi*n*t/T)).sum()\n",
     "    return result\n",
     "\n",
-    "def _derivative(self, variable, N = 20, dim = \"\", order = 1):\n",
+    "def derivative(self, variable, N = 20, dim = \"\", order = 1):\n",
     "    \"\"\"\n",
     "    Calculates the first and second derivative in dimension \n",
     "    of choice, applying a harmonic regression.\n",
@@ -60,17 +61,17 @@
     "        print(\"Calculating d/dt for all lon, lat points ...\")\n",
     "        for i in tqdm(range(len(self.ds[self._latitude_name]))):\n",
     "            for ii in range(len(self.ds[self._longitude_name])):\n",
-    "                dp[:, i, ii] =  self._calc_dX(self.ds[variable].data[:, i, ii], N, order)\n",
+    "                dp[:, i, ii] =  self.calc_dX(self.ds[variable].data[:, i, ii], N, order)\n",
     "    elif dim == self._latitude_name:\n",
     "        print(\"Calculating d/dlat for all time, lon points ...\")\n",
     "        for i in tqdm(range(len(self.ds[self._time_name]))):\n",
     "            for ii in range(len(self.ds[self._longitude_name])):\n",
-    "                dp[i, :, ii] =  self._calc_dX(self.ds[variable].data[i, :, ii], N, order)\n",
+    "                dp[i, :, ii] =  self.calc_dX(self.ds[variable].data[i, :, ii], N, order)\n",
     "    elif dim == self._longitude_name:\n",
     "        print(\"Calculating d/dlon for all time, lat points ...\")\n",
     "        for i in tqdm(range(len(self.ds[self._time_name]))):\n",
     "            for ii in range(len(self.ds[self._latitude_name])):\n",
-    "                dp[i, ii, :] =  self._calc_dX(self.ds[variable].data[i, ii, :], N, order)\n",
+    "                dp[i, ii, :] =  self.calc_dX(self.ds[variable].data[i, ii, :], N, order)\n",
     "    else:\n",
     "        errmsg = \"{} is not found.\".format(dim)\n",
     "\n",
@@ -79,7 +80,7 @@
     "    if order == 2:\n",
     "        self.ds['d2d{}{}'.format(dim, variable)] = ([self._time_name, self._latitude_name, self._longitude_name], dp)\n",
     "\n",
-    "def _calc_dX(self, data, N, order):\n",
+    "def calc_dX(self, data, N, order):\n",
     "    \"\"\"\n",
     "    Calculation of the derivative using harmonic regression (Fourier fit)\n",
     "    \"\"\"\n",
@@ -95,7 +96,7 @@
     "    if N > T:\n",
     "        N = T\n",
     "\n",
-    "    anbn = self._harmonicRegression(data[mask], N)\n",
+    "    anbn = self.harmonicRegression(data[mask], N)\n",
     "\n",
     "\n",
     "    Wi = 2 * np.pi / T\n",
@@ -123,13 +124,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "from nbdev import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"_calc_dX\" class=\"doc_header\"><code>_calc_dX</code><a href=\"__main__.py#L42\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"calc_dX\" class=\"doc_header\"><code>calc_dX</code><a href=\"__main__.py#L43\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>_calc_dX</code>(**`data`**, **`N`**, **`order`**)\n",
+       "> <code>calc_dX</code>(**`data`**, **`N`**, **`order`**)\n",
        "\n",
        "Calculation of the derivative using harmonic regression (Fourier fit)"
       ],
@@ -143,9 +154,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"_harmonicRegression\" class=\"doc_header\"><code>_harmonicRegression</code><a href=\"__main__.py#L1\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"harmonicRegression\" class=\"doc_header\"><code>harmonicRegression</code><a href=\"__main__.py#L2\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>_harmonicRegression</code>(**`data`**, **`N`**)\n",
+       "> <code>harmonicRegression</code>(**`data`**, **`N`**)\n",
        "\n",
        "Returns Fourier coefficients"
       ],
@@ -159,9 +170,9 @@
     {
      "data": {
       "text/markdown": [
-       "<h4 id=\"_derivative\" class=\"doc_header\"><code>_derivative</code><a href=\"__main__.py#L11\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
+       "<h4 id=\"derivative\" class=\"doc_header\"><code>derivative</code><a href=\"__main__.py#L12\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n",
        "\n",
-       "> <code>_derivative</code>(**`variable`**, **`N`**=*`20`*, **`dim`**=*`''`*, **`order`**=*`1`*)\n",
+       "> <code>derivative</code>(**`variable`**, **`N`**=*`20`*, **`dim`**=*`''`*, **`order`**=*`1`*)\n",
        "\n",
        "Calculates the first and second derivative in dimension \n",
        "of choice, applying a harmonic regression.\n",
@@ -176,89 +187,30 @@
     }
    ],
    "source": [
-    "def _harmonicRegression(self, data, N):\n",
-    "    \"\"\"Returns Fourier coefficients\"\"\"\n",
-    "    result = np.zeros((N, 2))\n",
-    "    T = len(data)\n",
-    "    t = np.arange(T)\n",
-    "    for n in range(N):\n",
-    "        result[n,0] = 2/T*(data * np.cos(2*np.pi*n*t/T)).sum()\n",
-    "        result[n,1] = 2/T*(data * np.sin(2*np.pi*n*t/T)).sum()\n",
-    "    return result\n",
-    "\n",
-    "def _derivative(self, variable, N = 20, dim = \"\", order = 1):\n",
-    "    \"\"\"\n",
-    "    Calculates the first and second derivative in dimension \n",
-    "    of choice, applying a harmonic regression.\n",
-    "    See Benestad et al. (2006)        \n",
-    "    \"\"\"  \n",
-    "    dp = np.zeros((self.ds[variable].data.shape))\n",
-    "\n",
-    "    if dim == self._time_name:\n",
-    "        print(\"Calculating d/dt for all lon, lat points ...\")\n",
-    "        for i in tqdm(range(len(self.ds[self._latitude_name]))):\n",
-    "            for ii in range(len(self.ds[self._longitude_name])):\n",
-    "                dp[:, i, ii] =  self._calc_dX(self.ds[variable].data[:, i, ii], N, order)\n",
-    "    elif dim == self._latitude_name:\n",
-    "        print(\"Calculating d/dlat for all time, lon points ...\")\n",
-    "        for i in tqdm(range(len(self.ds[self._time_name]))):\n",
-    "            for ii in range(len(self.ds[self._longitude_name])):\n",
-    "                dp[i, :, ii] =  self._calc_dX(self.ds[variable].data[i, :, ii], N, order)\n",
-    "    elif dim == self._longitude_name:\n",
-    "        print(\"Calculating d/dlon for all time, lat points ...\")\n",
-    "        for i in tqdm(range(len(self.ds[self._time_name]))):\n",
-    "            for ii in range(len(self.ds[self._latitude_name])):\n",
-    "                dp[i, ii, :] =  self._calc_dX(self.ds[variable].data[i, ii, :], N, order)\n",
-    "    else:\n",
-    "        errmsg = \"{} is not found.\".format(dim)\n",
-    "\n",
-    "    if order == 1:\n",
-    "        self.ds['dd{}{}'.format(dim, variable)] = ([self._time_name, self._latitude_name, self._longitude_name], dp)\n",
-    "    if order == 2:\n",
-    "        self.ds['d2d{}{}'.format(dim, variable)] = ([self._time_name, self._latitude_name, self._longitude_name], dp)\n",
-    "\n",
-    "def _calc_dX(self, data, N, order):\n",
-    "    \"\"\"\n",
-    "    Calculation of the derivative using harmonic regression (Fourier fit)\n",
-    "    \"\"\"\n",
-    "    if np.isnan(data).all() == True:\n",
-    "        return \n",
-    "\n",
-    "    mask = np.isfinite(data)\n",
-    "    T = len(data[mask])\n",
-    "    t = np.arange(T)\n",
-    "\n",
-    "    data = data - data.mean()\n",
-    "\n",
-    "    if N > T:\n",
-    "        N = T\n",
-    "\n",
-    "    anbn = self._harmonicRegression(data[mask], N)\n",
-    "\n",
-    "\n",
-    "    Wi = 2 * np.pi / T\n",
-    "\n",
-    "    dp = 0 \n",
-    "\n",
-    "    if order == 1:\n",
-    "        for i in range(0, N):\n",
-    "            dp = dp + (Wi * (-anbn[i,0]*np.sin(Wi*i*t)+anbn[i,1]*np.cos(Wi*i*t)))\n",
-    "    elif order == 2:\n",
-    "        for i in range(0, N):\n",
-    "            dp = dp + (Wi**2 * (-anbn[i,0]*np.cos(Wi*i*t) - anbn[i,1]*np.sin(Wi*i*t)))\n",
-    "    else:\n",
-    "        print(\"Your selection of order {} is not possible. Only 1th and 2nd derivative possible.\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "    tmp = data.copy()\n",
-    "    tmp[mask] = dp\n",
-    "\n",
-    "    return tmp\n",
-    "\n",
-    "show_doc(_calc_dX)\n",
-    "show_doc(_harmonicRegression)\n",
-    "show_doc(_derivative)"
+    "show_doc(calc_dX)\n",
+    "show_doc(harmonicRegression)\n",
+    "show_doc(derivative)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converted 00_storm_object.ipynb.\n",
+      "Converted 01_derivatives.ipynb.\n",
+      "Converted index.ipynb.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "from nbdev.export import *\n",
+    "notebook2script()"
    ]
   }
  ],
