--- a/02_stats.ipynb
+++ b/02_stats.ipynb
@@ -116,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "index = np.sin(time/2*np.pi)"
    ]
   },
@@ -125,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "a0, a1 = regression(dataset.noise.values, index)"
    ]
   },
@@ -134,6 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#export\n",
     "dataset['a0'] = ((\"lat\", \"lon\"), a0)\n",
     "dataset['a1'] = ((\"lat\", \"lon\"), a1)"
    ]
@@ -167,6 +170,7 @@
     }
    ],
    "source": [
+    "#export\n",
     "dataset['a1'].plot()"
    ]
   },
@@ -199,6 +203,7 @@
     }
    ],
    "source": [
+    "#export\n",
     "aoi = dataset.sel(lon = 150, lat = 0, method = \"nearest\")\n",
     "aoi.noise.plot()"
    ]
@@ -232,6 +237,7 @@
     }
    ],
    "source": [
+    "#export\n",
     "aoi.noise.plot()\n",
     "plt.plot(aoi.time, aoi['a0'].values + aoi['a1'].values * index)"
    ]
