--- a/02_stats.ipynb
+++ b/02_stats.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "#export\n",
     "import xarray as xr\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -60,8 +61,7 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from nbdev import *\n",
-    "import matplotlib.pyplot as plt"
+    "from nbdev import *"
    ]
   },
   {
@@ -88,6 +88,20 @@
    ],
    "source": [
     "show_doc(regression)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`data` is a n-d array\n",
+    "\n",
+    "`index` is a 1d array\n",
+    "\n",
+    "> order of data must be (time, lat, lon)\n",
+    "> order of index (time)\n",
+    "\n",
+    "Can be used for calculating regression maps. For example regression of SST anomalies in the North Atlantic Region onto AMO."
    ]
   },
   {
