--- a/02_stats.ipynb
+++ b/02_stats.ipynb
@@ -101,7 +101,10 @@
     "> order of data must be (time, lat, lon)\n",
     "> order of index (time)\n",
     "\n",
-    "Can be used for calculating regression maps. For example regression of SST anomalies in the North Atlantic Region onto AMO."
+    "Can be used for calculating regression maps. For example regression of SST anomalies in the North Atlantic Region onto AMO.\n",
+    "\n",
+    "\n",
+    "### Example"
    ]
   },
   {
@@ -110,8 +113,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
-    "\n",
+    "import xarray as xr\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "time = np.linspace(1, 100, 100)\n",
     "lat, lon = np.ogrid[-45:45:50j, 0:360:100j]\n",
     "\n",
@@ -130,7 +142,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
     "index = np.sin(time/2*np.pi)"
    ]
   },
@@ -140,7 +151,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
     "a0, a1 = regression(dataset.noise.values, index)"
    ]
   },
@@ -150,7 +160,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
     "dataset['a0'] = ((\"lat\", \"lon\"), a0)\n",
     "dataset['a1'] = ((\"lat\", \"lon\"), a1)"
    ]
@@ -184,7 +193,6 @@
     }
    ],
    "source": [
-    "#export\n",
     "dataset['a1'].plot()"
    ]
   },
@@ -217,7 +225,6 @@
     }
    ],
    "source": [
-    "#export\n",
     "aoi = dataset.sel(lon = 150, lat = 0, method = \"nearest\")\n",
     "aoi.noise.plot()"
    ]
@@ -251,7 +258,6 @@
     }
    ],
    "source": [
-    "#export\n",
     "aoi.noise.plot()\n",
     "plt.plot(aoi.time, aoi['a0'].values + aoi['a1'].values * index)"
    ]
