--- a/04_total_exchange_flow.ipynb
+++ b/04_total_exchange_flow.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(salt_flux.mean(), s)"
+    "plt.plot(salt_flux[0], s)"
    ]
   }
  ],
