--- a/03_helper_functions.ipynb
+++ b/03_helper_functions.ipynb
@@ -26,7 +26,8 @@
    "source": [
     "#export\n",
     "import xarray as xr\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from glob import glob"
    ]
   },
   {
