--- a/03_helper_functions.ipynb
+++ b/03_helper_functions.ipynb
@@ -129,7 +129,7 @@
     "            calendar = False\n",
     "        else:\n",
     "            calendar = True\n",
-    "        with xr.open_dataset(path, decode_times = calendar) as ds:\n",
+    "        with xr.open_dataset(path, decode_times = calendar, use_cftime = True) as ds:\n",
     "            if transform_calendar is not None:\n",
     "                ds[dim].attrs['calendar'] = transform_calendar\n",
     "                ds = xr.decode_cf(ds)\n",
