--- a/03_helper_functions.ipynb
+++ b/03_helper_functions.ipynb
@@ -165,17 +165,17 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def read_netcdfs(files, dim, transform_func, transform_calendar=None):\n",
+    "def read_netcdfs(files, dim, transform_func, transform_calendar=None, cftime = True):\n",
     "    \"\"\"Reads multiples netcdfs files. Should be used when open_mfdatasets is to slow.\"\"\"\n",
     "    def process_one_path(path):\n",
     "        if transform_calendar is not None:\n",
     "            calendar = False\n",
     "        else:\n",
     "            calendar = True\n",
-    "        with xr.open_dataset(path, decode_times = calendar, use_cftime = True) as ds:\n",
+    "        with xr.open_dataset(path, decode_times = calendar, use_cftime = cftime) as ds:\n",
     "            if transform_calendar is not None:\n",
     "                ds[dim].attrs['calendar'] = transform_calendar\n",
-    "                ds = xr.decode_cf(ds)\n",
+    "                ds = xr.decode_cf(ds, use_cftime = cftime)\n",
     "            if transform_func is not None:\n",
     "                ds = transform_func(ds)\n",
     "            ds.load()\n",
