update spatial mean

--- a/02_stats.ipynb
+++ b/02_stats.ipynb
@@ -261,6 +261,35 @@
     "aoi.noise.plot()\n",
     "plt.plot(aoi.time, aoi['a0'].values + aoi['a1'].values * index)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "\n",
+    "def mean2(x):\n",
+    "    \"\"\"Used for the corr2 function, according to Matlab.\n",
+    "    Args:\n",
+    "        x (float): \n",
+    "    Returns:\n",
+    "        y (float): mean of x\n",
+    "    \"\"\"\n",
+    "    y = np.sum(x) / np.size(x);\n",
+    "    return y\n",
+    "\n",
+    "def corr2(a,b):\n",
+    "    \"\"\"\n",
+    "    According to Matlab corr2-function.\n",
+    "    \"\"\"\n",
+    "    a = a - self.mean2(a)\n",
+    "    b = b - self.mean2(b)\n",
+    "\n",
+    "    r = (a*b).sum() / math.sqrt((a*a).sum() * (b*b).sum());\n",
+    "    return r"
+   ]
   }
  ],
  "metadata": {
