--- a/index.ipynb
+++ b/index.ipynb
@@ -30,6 +30,7 @@
     "- derivative\n",
     "    * Calculates first and second derivative following Gill (1981)\n",
     "- stats\n",
+    "    * spatial mean added\n",
     "    * regression function for regression maps and more\n",
     "- helper_functions\n",
     "    * reading netcdf files using xarray\n",
